client.dataset.create can send RPC request and get back an RPC response

--- a/notebooks/rds-client-planning.ipynb
+++ b/notebooks/rds-client-planning.ipynb
@@ -268,11 +268,13 @@
     "        self._api = api\n",
     "\n",
     "    def approve(self, job_id):\n",
+    "        # client-facing part\n",
     "        prompt = input(f\"Are you sure you want to approve job {job_id}? (yes/no): \")\n",
     "        if prompt.lower() != \"yes\":\n",
     "            print(\"Job approval cancelled\")\n",
     "            return None\n",
     "\n",
+    "        # server-facing wrapped by the _api\n",
     "        return self._api.job.approve(job_id)\n",
     "\n",
     "class JobAPI:\n",
