--- a/scripts/data_prep.ipynb
+++ b/scripts/data_prep.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12a758efa8bf4a7fa8838d5aea23392e",
+       "model_id": "7b0a938cea9b44238ccea035b1aad236",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,22 +41,36 @@
      "output_type": "display_data"
     },
     {
-     "ename": "TypeError",
-     "evalue": "DockerRunner.__init__() got an unexpected keyword argument 'ui'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/azizwork/Workspace/rds/scripts/data_prep.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/azizwork/Workspace/rds/scripts/data_prep.ipynb#X10sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m output \u001b[39m=\u001b[39m Output()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/azizwork/Workspace/rds/scripts/data_prep.ipynb#X10sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m display(output)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/azizwork/Workspace/rds/scripts/data_prep.ipynb#X10sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m runner \u001b[39m=\u001b[39m DockerRunner(ui\u001b[39m=\u001b[39;49mRichConsoleUI())\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/azizwork/Workspace/rds/scripts/data_prep.ipynb#X10sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m runner\u001b[39m.\u001b[39mrun(config)\n",
-      "\u001b[0;31mTypeError\u001b[0m: DockerRunner.__init__() got an unexpected keyword argument 'ui'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90aaaa3e1cb941178be72154170107d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value=\"<b style='color: #7F7F7F'>Initializing...</b>\", layout=Layout(margin='5px 0')), Flo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "124"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from syft_runtime.main import DockerRunner, JobConfig, RichConsoleUI, FileOutputHandler\n",
+    "from syft_runtime.main import DockerRunner, JobConfig, RichConsoleUI, FileOutputHandler, JupyterWidgetHandler\n",
     "from IPython.display import display\n",
     "from ipywidgets import Output\n",
-    "\n",
+    "from IPython.display import clear_output\n",
+    "clear_output(wait=True)\n",
     "\n",
     "config = JobConfig(\n",
     "    function_folder=code.directory,\n",
@@ -64,26 +78,89 @@
     "    data_path=dataset.path,\n",
     "    runtime=code.runtime,\n",
     "    job_folder=f\"do_dir/jobs/{job.id}\",\n",
-    "    timeout=2,\n",
+    "    timeout=1,\n",
     "    data_mount_dir=\"/data\",\n",
     ")\n",
     "\n",
     "output = Output()\n",
     "display(output)\n",
-    "runner = DockerRunner(handlers=[RichConsoleUI(), FileOutputHandler()])\n",
+    "runner = DockerRunner(handlers=[JupyterWidgetHandler(), FileOutputHandler()])\n",
     "\n",
     "runner.run(config)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "\n"
+    "import ipywidgets as widgets\n",
+    "\n",
+    "class JupyterWidgetHandler:\n",
+    "    \"\"\"Handles job output display using Jupyter widgets\"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # Create widgets\n",
+    "        self.output_widget = widgets.Output(\n",
+    "            layout={\"border\": \"1px solid #ddd\", \"padding\": \"10px\", \"margin\": \"5px 0\"}\n",
+    "        )\n",
+    "        self.status_widget = widgets.HTML(\n",
+    "            value=\"<b style='color: #7F7F7F'>Initializing...</b>\",\n",
+    "            layout={\"margin\": \"5px 0\"},\n",
+    "        )\n",
+    "        self.progress_bar = widgets.FloatProgress(\n",
+    "            value=0,\n",
+    "            min=0,\n",
+    "            max=100,\n",
+    "            description=\"Progress:\",\n",
+    "            bar_style=\"info\",\n",
+    "            orientation=\"horizontal\",\n",
+    "            layout={\"width\": \"50%\", \"margin\": \"10px 0\"},\n",
+    "        )\n",
+    "\n",
+    "        # Arrange widgets vertically\n",
+    "        self.container = widgets.VBox(\n",
+    "            [self.status_widget, self.progress_bar, self.output_widget]\n",
+    "        )\n",
+    "        display(self.container)\n",
+    "\n",
+    "JupyterWidgetHandler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0692c1e6b3ed41ee918673ca47936397",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value=\"<b style='color: #7F7F7F'>Initializing...</b>\", layout=Layout(margin='5px 0'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "\n",
+    "display(widgets.HTML(\n",
+    "            value=\"<b style='color: #7F7F7F'>Initializing...</b>\",\n",
+    "            layout={\"margin\": \"5px 0\"},\n",
+    "        ))"
    ]
   }
  ],
