generating schema json file

--- a/notebooks/dataset_create.ipynb
+++ b/notebooks/dataset_create.ipynb
@@ -16,6 +16,7 @@
     "    name=\"Cencus\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=\"./data/census/private.csv\",  # MUST EXIST\n",
     "    mock_path=\"./data/census/mock.csv\",\n",
+    "    file_type=\"csv\",\n",
     ")"
    ]
   },
@@ -30,6 +31,7 @@
     "    name=\"med_MNIST\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=\"./data/med_MNIST/private\",  # MUST EXIST\n",
     "    mock_path=\"./data/med_MNIST/mock\",\n",
+    "    file_type=\"jpeg\",\n",
     ")"
    ]
   },
@@ -37,6 +39,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": []
