Simplify RDSFileStore init method, fix yaml key ordering
Co-authored-by: Shubham Gupta <11032835+shubham3121@users.noreply.github.com>

--- a/notebooks/store_prototype.ipynb
+++ b/notebooks/store_prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,13 @@
     "    description=\"MNIST dataset\",\n",
     "    data=SyftBoxURL(\"syft://rasswanth@openmined.org/public/datasets/mock.csv\"),\n",
     "    mock=SyftBoxURL(\"syft://rasswanth@openmined.org/private/datasets/private.csv\"),\n",
-    "    tags=[ {\"name\": \"mnist\", \"value\": {\"name\": \"test\"}}, {\"name\": \"dataset\", \"value\": \"mnist\"} ],\n",
+    "    tags=[\"dataset\", \"mnist\", \"tag1\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "UUID('6e55826c-c72b-440b-b702-919139fc3232')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_store.create(dataset)"
    ]
@@ -64,15 +53,8 @@
     "import yaml\n",
     "json_dump = dataset.model_dump(mode=\"json\")\n",
     "\n",
-    "yaml_dump = yaml.safe_dump(json_dump)"
+    "yaml_dump = yaml.safe_dump(json_dump, sort_keys=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -98,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
