Generalize YAMLFileSystemDatabase to create a FS-backed DB for any pydantic model - Create RDSStore subclass for storing RDS-related data

--- a/notebooks/store_prototype.ipynb
+++ b/notebooks/store_prototype.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from syft_core.url import SyftBoxURL\n",
     "from syft_rds.specs import DatasetSpec\n",
-    "from syft_rds.store import YAMLStore"
+    "from syft_rds.store import RDSStore"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_store = YAMLStore(app_name=\"rds\", spec=DatasetSpec)"
+    "dataset_store = RDSStore(spec=DatasetSpec)"
    ]
   },
   {
